--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -4,6 +4,8 @@
 
 @layer base {
   :root {
+    --font-sans: 'Inter', sans-serif;
+
     /* General colors */
     --background: 0 0% 95%; /* Light mode background */
     --foreground: 0 0% 5%; /* Light mode text */
@@ -43,19 +45,6 @@
 
     --border: var(--background3);
     --input: 0 0% 5%;
-
-    /* Sidebar colors */
-    --sidebar-background: var(--background);
-    --sidebar-foreground: var(--foreground);
-
-    --sidebar-primary: var(--primary);
-    --sidebar-primary-foreground: var(--primary-foreground);
-
-    --sidebar-accent: var(--accent);
-    --sidebar-accent-foreground: var(--accent-foreground);
-
-    --sidebar-border: var(--border);
-    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
   .dark {
@@ -98,23 +87,11 @@
 
     --border: var(--background3);
     --input: 0 0% 95%;
-
-    /* Sidebar colors */
-    --sidebar-background: var(--background);
-    --sidebar-foreground: var(--foreground);
-
-    --sidebar-primary: var(--primary);
-    --sidebar-primary-foreground: var(--primary-foreground);
-
-    --sidebar-accent: var(--accent);
-    --sidebar-accent-foreground: var(--accent-foreground);
-
-    --sidebar-border: var(--border);
-    --sidebar-ring: 217.2 91.2% 59.8%;
   }
 
   body {
     background-color: var(--background);
     color: var(--foreground);
+    font-family: var(--font-sans); 
   }
 }
