refactor, a11y, and other additions

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -10,7 +10,7 @@
     --background: #F2F2F2;
     --foreground: #0D0D0D;
 
-    --primary: #50596D;
+    --primary: #475062;
     --primary-foreground: var(--foreground);
 
     --secondary: #363A44;
@@ -66,7 +66,7 @@
     --background: #0D0D0D;
     --foreground: #F2F2F2;
 
-    --primary: #929BAF;
+    --primary: #9da6b8;
     --primary-foreground: var(--foreground);
 
     --secondary: #BBBFC9;
